# compflow2

./: Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yml
bench/: bench.py
src/: lib.rs
test/: compare.py
