[package]
name = "compflow2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "compflow2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
numpy = "0.26"
ndarray = "0.16.1"
comp-flow = {git = "https://github.com/aureliegrebe/comp-flow/", rev = "6e5034c"}
